add defaul resets

--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,28 @@
+:root {
+  --main-white-color: #f9f9f9;
+}
 
+a,
+p,
+span {
+  text-decoration: none;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+}
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+p {
+  margin: 0;
+}
