--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 :root {
-  --main-white-color: #f9f9f9;
+  --background-white: #f9f9f9;
 
   font-family: "Manrope", sans-serif;
   font-weight: 500;
