--- a/src/components/BurgerMenu/BurgerMenu.module.css
+++ b/src/components/BurgerMenu/BurgerMenu.module.css
@@ -3,18 +3,35 @@
 }
 
 .burgerIcon {
-  font-size: 24px;
   cursor: pointer;
+
+  z-index: 101;
+}
+
+.icon {
+  width: 32px;
+  height: 32px;
+}
+
+.closeIcon {
+  position: absolute;
+  width: 32px;
+  height: 32px;
+
+  top: 28px;
+  right: 20px;
 }
 
 .menuContent {
   position: absolute;
-  top: 40px;
+
+  height: 100%;
+  width: 218px;
   right: 0;
-  background-color: white;
+  top: 0;
+  background-color: #ffffff;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-  z-index: 10;
+  z-index: 100;
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
 }
