add logo mobile styling

--- a/src/components/Logo/Logo.module.css
+++ b/src/components/Logo/Logo.module.css
@@ -1,4 +1,17 @@
+.logoCont {
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+}
+
 .logoText {
+  font-family: Manrope;
+  font-size: 20px;
+  font-weight: 800;
+  line-height: 20px;
+  letter-spacing: -0.04em;
+
+  color: #262626;
 }
 
 .logoIcon {
