--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -43,7 +43,7 @@
   object-fit: cover;
   scale: crop;
   width: 100%;
-  max-width: 335px;
+  /* max-width: 335px; */
   height: 402px;
   border-radius: 30px;
 }
