--- a/src/components/ModalApproveAction/ModalApproveAction.module.css
+++ b/src/components/ModalApproveAction/ModalApproveAction.module.css
@@ -4,7 +4,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.75);
+  background: #2626264d;
   overflow: hidden;
   transition: opacity 0.3s;
   z-index: 999;
@@ -25,16 +25,20 @@
   position: relative;
   margin: 20px;
   width: 100%;
-  max-width: 566px;
+
   max-height: 80%;
   border-radius: 30px;
   background-color: #ffffff;
-  padding: 64px;
+  padding: 40px 28px;
   overflow-y: auto;
   transform: translateY(-50px);
   transition: opacity 0.3s, transform 0.3s;
   scrollbar-width: none;
   -ms-overflow-style: none;
+
+  display: flex;
+  justify-content: center;
+  gap: 20px;
 }
 
 .modalContent::-webkit-scrollbar {
@@ -43,8 +47,8 @@
 }
 
 .icon {
-  width: 32px;
-  height: 32px;
+  width: 24px;
+  height: 24px;
 }
 
 .closeBtn {
@@ -56,20 +60,28 @@
   outline: none;
   top: 20px;
   right: 20px;
-  width: 32px;
-  height: 32px;
+  width: 24px;
+  height: 24px;
   padding: 0;
   background-color: transparent;
   cursor: pointer;
-
-  transition: var(--animation);
-}
-
-.closeBtn:hover,
-.closeBtn:focus {
-  color: #ffdc86;
 }
 
 .no-scroll {
   overflow: hidden;
+}
+
+.iconBlock {
+  width: 80px;
+  height: 80px;
+  background: #fff4df;
+  border-radius: 40px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.catIcon {
+  width: 44px;
+  height: 44px;
 }
