--- a/src/components/ModalApproveAction/ModalApproveAction.module.css
+++ b/src/components/ModalApproveAction/ModalApproveAction.module.css
@@ -37,7 +37,9 @@
   -ms-overflow-style: none;
 
   display: flex;
+  flex-direction: column;
   justify-content: center;
+  align-items: center;
   gap: 20px;
 }
 
@@ -84,4 +86,56 @@
 .catIcon {
   width: 44px;
   height: 44px;
+}
+.question {
+  font-family: Manrope;
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 20px;
+  letter-spacing: -0.03em;
+  text-align: left;
+
+  color: #262626;
+}
+.textBlock {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 28px;
+}
+.btns {
+  display: flex;
+  gap: 8px;
+}
+.btnYes {
+  border: none;
+  border-radius: 30px;
+  padding: 12px 57px;
+  background: #f6b83d;
+
+  color: #ffffff;
+  font-family: Manrope;
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 18px;
+  letter-spacing: -0.03em;
+  text-align: left;
+
+  cursor: pointer;
+}
+.btnCancel {
+  border: none;
+  border-radius: 30px;
+  padding: 12px 44px;
+  background: #2626260d;
+
+  color: #262626;
+  font-family: Manrope;
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 18px;
+  letter-spacing: -0.03em;
+  text-align: left;
+
+  cursor: pointer;
 }
